--- a/app/src/main/res/layout/article_fragment_layout.xml
+++ b/app/src/main/res/layout/article_fragment_layout.xml
@@ -2,10 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@android:color/holo_blue_light"
+    android:padding="10dp">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/showArticle_tv"/>
+        android:id="@+id/showArticle_tv"
+        android:background="#fff"
+        android:padding="15dp"/>
 
 </LinearLayout>
